KIconEngine: Return actual icon name of loaded icon

XDG icon themes return a "more generic" fallback icon if the
requested one cannot be found, e.g. `foo-bar` may return `foo`.

Previously, the returned `QIcon` would still return a name
of `foo-bar`, which made it impossible for applications to
check whether the specific icon requested was actually loaded.

BUG: 432293