src/kiconengine.cpp
@@ -7,10 +7,12 @@
 
 #include "kiconengine.h"
 
+#include "kiconloader_p.h"
 #include <kiconloader.h>
 
 #include "kiconcolors.h"
 #include <KIconTheme>
+#include <QFileInfo>
 #include <QPainter>
 #include <qscopeguard.h>
 
@@ -20,24 +22,25 @@ public:
     QPointer<KIconLoader> mIconLoader;
     bool mCustomColors = false;
     KIconColors mColors;
+    QString mActualIconName;
 };
 
 KIconEngine::KIconEngine(const QString &iconName, KIconLoader *iconLoader, const QStringList &overlays)
     : mIconName(iconName)
     , mOverlays(overlays)
-    , d(new KIconEnginePrivate{iconLoader, false, {}})
+    , d(new KIconEnginePrivate{iconLoader, false, {}, {}})
 {
 }
 
 KIconEngine::KIconEngine(const QString &iconName, KIconLoader *iconLoader)
     : mIconName(iconName)
-    , d(new KIconEnginePrivate{iconLoader, false, {}})
+    , d(new KIconEnginePrivate{iconLoader, false, {}, {}})
 {
 }
 
 KIconEngine::KIconEngine(const QString &iconName, const KIconColors &colors, KIconLoader *iconLoader)
     : mIconName(iconName)
-    , d(new KIconEnginePrivate{iconLoader, true, colors})
+    , d(new KIconEnginePrivate{iconLoader, true, colors, {}})
 {
 }
 
@@ -99,6 +102,8 @@ QPixmap KIconEngine::createPixmap(const QSize &size, qreal scale, QIcon::Mode mo
 
     const QSize scaledSize = size / scale;
 
+    QString iconPath;
+
     const int kstate = qIconModeToKIconState(mode);
     QPixmap pix = d->mIconLoader->loadScaledIcon(mIconName,
                                                  KIconLoader::Desktop,
@@ -106,9 +111,13 @@ QPixmap KIconEngine::createPixmap(const QSize &size, qreal scale, QIcon::Mode mo
                                                  scaledSize,
                                                  kstate,
                                                  mOverlays,
-                                                 nullptr,
+                                                 &iconPath,
                                                  false,
                                                  d->mCustomColors ? std::make_optional(d->mColors) : std::nullopt);
+
+    if (!iconPath.isEmpty() && !d->mActualIconName.isEmpty()) {
+        d->mActualIconName = QFileInfo(iconPath).baseName();
+    }
 
     if (pix.size() == size) {
         return pix;
@@ -139,10 +148,21 @@ QString KIconEngine::iconName()
 QString KIconEngine::iconName() const
 #endif
 {
-    if (!d->mIconLoader || !d->mIconLoader->hasIcon(mIconName)) {
+    if (!d->mActualIconName.isEmpty()) {
+        return d->mActualIconName;
+    }
+
+    if (!d->mIconLoader) {
         return QString();
     }
-    return mIconName;
+
+    const QString iconPath = KIconLoaderPrivate::get(d->mIconLoader)->preferredIconPath(mIconName);
+    if (iconPath.isEmpty()) {
+        return QString();
+    }
+
+    d->mActualIconName = QFileInfo(iconPath).baseName();
+    return d->mActualIconName;
 }
 
 Q_GLOBAL_STATIC_WITH_ARGS(QList<QSize>,
